6350062/src/main/java/randy/generated/antlr/Oberon0Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g 2011-01-29 14:10:23

package randy.generated.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

@SuppressWarnings("all")
public class Oberon0Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TRUE", "FALSE", "NIL", "MINUS", "PLUS", "TIMES", "DIVIDE", "CONST", "VAR", "TYPE", "IF", "THEN", "ELSE", "ELSIF", "END", "MODULE", "DO", "WHILE", "BEGIN", "PROCEDURE", "ARRAY", "OF", "RECORD", "POINTERTO", "MOD", "AND", "OR", "ASSIGNMENT", "EQUALS", "NOTEQUALS", "SMALLERTHEN", "GREATERTHEN", "SMALLEREQUALS", "GREATEREQUALS", "NOT", "REFVAR", "PROCEDURECALL", "PARAMETERS", "EXPRESSION", "BODY", "LH", "RH", "DOTSELECTOR", "ARRAYSELECTOR", "IDENT", "WHITESPACE", "INTEGER", "']'", "'('", "')'", "','", "';'", "':'"
    };
    public static final int EOF=-1;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int TRUE=4;
    public static final int FALSE=5;
    public static final int NIL=6;
    public static final int MINUS=7;
    public static final int PLUS=8;
    public static final int TIMES=9;
    public static final int DIVIDE=10;
    public static final int CONST=11;
    public static final int VAR=12;
    public static final int TYPE=13;
    public static final int IF=14;
    public static final int THEN=15;
    public static final int ELSE=16;
    public static final int ELSIF=17;
    public static final int END=18;
    public static final int MODULE=19;
    public static final int DO=20;
    public static final int WHILE=21;
    public static final int BEGIN=22;
    public static final int PROCEDURE=23;
    public static final int ARRAY=24;
    public static final int OF=25;
    public static final int RECORD=26;
    public static final int POINTERTO=27;
    public static final int MOD=28;
    public static final int AND=29;
    public static final int OR=30;
    public static final int ASSIGNMENT=31;
    public static final int EQUALS=32;
    public static final int NOTEQUALS=33;
    public static final int SMALLERTHEN=34;
    public static final int GREATERTHEN=35;
    public static final int SMALLEREQUALS=36;
    public static final int GREATEREQUALS=37;
    public static final int NOT=38;
    public static final int REFVAR=39;
    public static final int PROCEDURECALL=40;
    public static final int PARAMETERS=41;
    public static final int EXPRESSION=42;
    public static final int BODY=43;
    public static final int LH=44;
    public static final int RH=45;
    public static final int DOTSELECTOR=46;
    public static final int ARRAYSELECTOR=47;
    public static final int IDENT=48;
    public static final int WHITESPACE=49;
    public static final int INTEGER=50;

    // delegates
    // delegators


        public Oberon0Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Oberon0Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Oberon0Parser.tokenNames; }
    public String getGrammarFileName() { return "D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g"; }


    public static class ws_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ws"
    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:72:1: ws : ( WHITESPACE )* ;
    public final Oberon0Parser.ws_return ws() throws RecognitionException {
        Oberon0Parser.ws_return retval = new Oberon0Parser.ws_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token WHITESPACE1=null;

        CommonTree WHITESPACE1_tree=null;

        try {
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:72:3: ( ( WHITESPACE )* )
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:72:7: ( WHITESPACE )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:72:7: ( WHITESPACE )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==WHITESPACE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:72:8: WHITESPACE
            	    {
            	    WHITESPACE1=(Token)match(input,WHITESPACE,FOLLOW_WHITESPACE_in_ws375); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    WHITESPACE1_tree = (CommonTree)adaptor.create(WHITESPACE1);
            	    adaptor.addChild(root_0, WHITESPACE1_tree);
            	    }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ws"

    public static class ident_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ident"
    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:73:1: ident : IDENT ;
    public final Oberon0Parser.ident_return ident() throws RecognitionException {
        Oberon0Parser.ident_return retval = new Oberon0Parser.ident_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENT2=null;

        CommonTree IDENT2_tree=null;

        try {
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:73:6: ( IDENT )
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:73:10: IDENT
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENT2=(Token)match(input,IDENT,FOLLOW_IDENT_in_ident385); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENT2_tree = (CommonTree)adaptor.create(IDENT2);
            adaptor.addChild(root_0, IDENT2_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ident"

    public static class selector_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selector"
    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:1: selector : ( ident ( ( DOTSELECTOR ident ) | ( ARRAYSELECTOR expression ']' ) )+ | ident );
    public final Oberon0Parser.selector_return selector() throws RecognitionException {
        Oberon0Parser.selector_return retval = new Oberon0Parser.selector_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token DOTSELECTOR4=null;
        Token ARRAYSELECTOR6=null;
        Token char_literal8=null;
        Oberon0Parser.ident_return ident3 = null;

        Oberon0Parser.ident_return ident5 = null;

        Oberon0Parser.expression_return expression7 = null;

        Oberon0Parser.ident_return ident9 = null;


        CommonTree DOTSELECTOR4_tree=null;
        CommonTree ARRAYSELECTOR6_tree=null;
        CommonTree char_literal8_tree=null;

        try {
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:9: ( ident ( ( DOTSELECTOR ident ) | ( ARRAYSELECTOR expression ']' ) )+ | ident )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==IDENT) ) {
                int LA3_1 = input.LA(2);

                if ( ((LA3_1>=DOTSELECTOR && LA3_1<=ARRAYSELECTOR)) ) {
                    alt3=1;
                }
                else if ( (LA3_1==EOF||(LA3_1>=MINUS && LA3_1<=DIVIDE)||(LA3_1>=THEN && LA3_1<=END)||LA3_1==DO||LA3_1==OF||(LA3_1>=MOD && LA3_1<=GREATEREQUALS)||(LA3_1>=51 && LA3_1<=55)) ) {
                    alt3=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:12: ident ( ( DOTSELECTOR ident ) | ( ARRAYSELECTOR expression ']' ) )+
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_ident_in_selector404);
                    ident3=ident();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ident3.getTree());
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:18: ( ( DOTSELECTOR ident ) | ( ARRAYSELECTOR expression ']' ) )+
                    int cnt2=0;
                    loop2:
                    do {
                        int alt2=3;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==DOTSELECTOR) ) {
                            alt2=1;
                        }
                        else if ( (LA2_0==ARRAYSELECTOR) ) {
                            alt2=2;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:19: ( DOTSELECTOR ident )
                    	    {
                    	    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:19: ( DOTSELECTOR ident )
                    	    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:20: DOTSELECTOR ident
                    	    {
                    	    DOTSELECTOR4=(Token)match(input,DOTSELECTOR,FOLLOW_DOTSELECTOR_in_selector408); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) {
                    	    DOTSELECTOR4_tree = (CommonTree)adaptor.create(DOTSELECTOR4);
                    	    root_0 = (CommonTree)adaptor.becomeRoot(DOTSELECTOR4_tree, root_0);
                    	    }
                    	    pushFollow(FOLLOW_ident_in_selector411);
                    	    ident5=ident();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ident5.getTree());

                    	    }


                    	    }
                    	    break;
                    	case 2 :
                    	    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:40: ( ARRAYSELECTOR expression ']' )
                    	    {
                    	    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:40: ( ARRAYSELECTOR expression ']' )
                    	    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:41: ARRAYSELECTOR expression ']'
                    	    {
                    	    ARRAYSELECTOR6=(Token)match(input,ARRAYSELECTOR,FOLLOW_ARRAYSELECTOR_in_selector415); if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) {
                    	    ARRAYSELECTOR6_tree = (CommonTree)adaptor.create(ARRAYSELECTOR6);
                    	    root_0 = (CommonTree)adaptor.becomeRoot(ARRAYSELECTOR6_tree, root_0);
                    	    }
                    	    pushFollow(FOLLOW_expression_in_selector418);
                    	    expression7=expression();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression7.getTree());
                    	    char_literal8=(Token)match(input,51,FOLLOW_51_in_selector420); if (state.failed) return retval;

                    	    }


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt2 >= 1 ) break loop2;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(2, input);
                                throw eee;
                        }
                        cnt2++;
                    } while (true);


                    }
                    break;
                case 2 :
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:75:77: ident
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_ident_in_selector428);
                    ident9=ident();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, ident9.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "selector"

    public static class numberLiteral_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "numberLiteral"
    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:76:1: numberLiteral : INTEGER ;
    public final Oberon0Parser.numberLiteral_return numberLiteral() throws RecognitionException {
        Oberon0Parser.numberLiteral_return retval = new Oberon0Parser.numberLiteral_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token INTEGER10=null;

        CommonTree INTEGER10_tree=null;

        try {
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:76:14: ( INTEGER )
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:76:17: INTEGER
            {
            root_0 = (CommonTree)adaptor.nil();

            INTEGER10=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_numberLiteral435); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            INTEGER10_tree = (CommonTree)adaptor.create(INTEGER10);
            adaptor.addChild(root_0, INTEGER10_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "numberLiteral"

    public static class booleanLiteral_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "booleanLiteral"
    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:77:1: booleanLiteral : ( TRUE | FALSE );
    public final Oberon0Parser.booleanLiteral_return booleanLiteral() throws RecognitionException {
        Oberon0Parser.booleanLiteral_return retval = new Oberon0Parser.booleanLiteral_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set11=null;

        CommonTree set11_tree=null;

        try {
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:77:15: ( TRUE | FALSE )
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set11=(Token)input.LT(1);
            if ( (input.LA(1)>=TRUE && input.LA(1)<=FALSE) ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set11));
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "booleanLiteral"

    public static class factor_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "factor"
    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:78:1: factor : ( selector | NIL | booleanLiteral | numberLiteral | '(' expression ')' | NOT factor );
    public final Oberon0Parser.factor_return factor() throws RecognitionException {
        Oberon0Parser.factor_return retval = new Oberon0Parser.factor_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NIL13=null;
        Token char_literal16=null;
        Token char_literal18=null;
        Token NOT19=null;
        Oberon0Parser.selector_return selector12 = null;

        Oberon0Parser.booleanLiteral_return booleanLiteral14 = null;

        Oberon0Parser.numberLiteral_return numberLiteral15 = null;

        Oberon0Parser.expression_return expression17 = null;

        Oberon0Parser.factor_return factor20 = null;


        CommonTree NIL13_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree NOT19_tree=null;

        try {
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:78:7: ( selector | NIL | booleanLiteral | numberLiteral | '(' expression ')' | NOT factor )
            int alt4=6;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                alt4=1;
                }
                break;
            case NIL:
                {
                alt4=2;
                }
                break;
            case TRUE:
            case FALSE:
                {
                alt4=3;
                }
                break;
            case INTEGER:
                {
                alt4=4;
                }
                break;
            case 52:
                {
                alt4=5;
                }
                break;
            case NOT:
                {
                alt4=6;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:78:11: selector
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_selector_in_factor452);
                    selector12=selector();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, selector12.getTree());

                    }
                    break;
                case 2 :
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:78:22: NIL
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    NIL13=(Token)match(input,NIL,FOLLOW_NIL_in_factor456); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NIL13_tree = (CommonTree)adaptor.create(NIL13);
                    adaptor.addChild(root_0, NIL13_tree);
                    }

                    }
                    break;
                case 3 :
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:78:28: booleanLiteral
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_booleanLiteral_in_factor460);
                    booleanLiteral14=booleanLiteral();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, booleanLiteral14.getTree());

                    }
                    break;
                case 4 :
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:78:45: numberLiteral
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_numberLiteral_in_factor464);
                    numberLiteral15=numberLiteral();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, numberLiteral15.getTree());

                    }
                    break;
                case 5 :
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:78:61: '(' expression ')'
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    char_literal16=(Token)match(input,52,FOLLOW_52_in_factor468); if (state.failed) return retval;
                    pushFollow(FOLLOW_expression_in_factor471);
                    expression17=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression17.getTree());
                    char_literal18=(Token)match(input,53,FOLLOW_53_in_factor473); if (state.failed) return retval;

                    }
                    break;
                case 6 :
                    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:78:84: NOT factor
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    NOT19=(Token)match(input,NOT,FOLLOW_NOT_in_factor478); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    NOT19_tree = (CommonTree)adaptor.create(NOT19);
                    root_0 = (CommonTree)adaptor.becomeRoot(NOT19_tree, root_0);
                    }
                    pushFollow(FOLLOW_factor_in_factor481);
                    factor20=factor();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, factor20.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "factor"

    public static class term_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "term"
    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:79:1: term : factor ( ( TIMES | DIVIDE | MOD | AND ) factor )* ;
    public final Oberon0Parser.term_return term() throws RecognitionException {
        Oberon0Parser.term_return retval = new Oberon0Parser.term_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set22=null;
        Oberon0Parser.factor_return factor21 = null;

        Oberon0Parser.factor_return factor23 = null;


        CommonTree set22_tree=null;

        try {
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:79:5: ( factor ( ( TIMES | DIVIDE | MOD | AND ) factor )* )
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:79:9: factor ( ( TIMES | DIVIDE | MOD | AND ) factor )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_factor_in_term489);
            factor21=factor();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, factor21.getTree());
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:79:16: ( ( TIMES | DIVIDE | MOD | AND ) factor )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=TIMES && LA5_0<=DIVIDE)||(LA5_0>=MOD && LA5_0<=AND)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:79:17: ( TIMES | DIVIDE | MOD | AND ) factor
            	    {
            	    set22=(Token)input.LT(1);
            	    set22=(Token)input.LT(1);
            	    if ( (input.LA(1)>=TIMES && input.LA(1)<=DIVIDE)||(input.LA(1)>=MOD && input.LA(1)<=AND) ) {
            	        input.consume();
            	        if ( state.backtracking==0 ) root_0 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(set22), root_0);
            	        state.errorRecovery=false;state.failed=false;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_factor_in_term503);
            	    factor23=factor();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, factor23.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "term"

    public static class simpleExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "simpleExpression"
    // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:80:1: simpleExpression : ( PLUS | MINUS )? term ( ( PLUS | MINUS | OR ) term )* ;
    public final Oberon0Parser.simpleExpression_return simpleExpression() throws RecognitionException {
        Oberon0Parser.simpleExpression_return retval = new Oberon0Parser.simpleExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PLUS24=null;
        Token MINUS25=null;
        Token set27=null;
        Oberon0Parser.term_return term26 = null;

        Oberon0Parser.term_return term28 = null;


        CommonTree PLUS24_tree=null;
        CommonTree MINUS25_tree=null;
        CommonTree set27_tree=null;

        try {
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:80:17: ( ( PLUS | MINUS )? term ( ( PLUS | MINUS | OR ) term )* )
            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:80:19: ( PLUS | MINUS )? term ( ( PLUS | MINUS | OR ) term )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // D:\\SSD\\rascal_workspace\\6350062\\grammar\\Oberon0.g:80:19: ( PLUS | MINUS )?
            int alt6=3;
